Fix bug where Save as Event (and task) form was visible before the dialog was created

--- a/plugins/calendar/skins/larry/calendar.css
+++ b/plugins/calendar/skins/larry/calendar.css
@@ -539,6 +539,7 @@ body.calendarmain #searchmenulink {
 	width: 15px;
 }
 
+#eventedit.uidialog,
 .calendarmain div.uidialog {
 	display: none;
 }
