--- a/plugins/tasklist/skins/larry/tasklist.css
+++ b/plugins/tasklist/skins/larry/tasklist.css
@@ -26,6 +26,7 @@ ul.toolbarmenu li span.icon.taskadd,
 	background-position: -4px -90px;
 }
 
+#taskedit.uidialog,
 .tasklistview div.uidialog {
 	display: none;
 }
